---
source: minijinja/tests/test_parser.rs
expression: "&ast"
input_file: minijinja/tests/parser-inputs/ifexpr.txt

---
Ok(
    Template {
        children: [
            EmitExpr {
                expr: IfExpr {
                    test_expr: Var {
                        id: "b",
                    } @ 1:8-1:9,
                    true_expr: Var {
                        id: "a",
                    } @ 1:3-1:4,
                    false_expr: Some(
                        Var {
                            id: "c",
                        } @ 1:15-1:16,
                    ),
                } @ 1:3-1:19,
            } @ 1:0-1:19,
            EmitRaw {
                raw: "\n",
            } @ 1:19-2:0,
            EmitExpr {
                expr: IfExpr {
                    test_expr: Var {
                        id: "b",
                    } @ 2:8-2:9,
                    true_expr: Var {
                        id: "a",
                    } @ 2:3-2:4,
                    false_expr: None,
                } @ 2:3-2:12,
            } @ 2:0-2:12,
        ],
    } @ 1:0-2:12,
)
